--- a/Search_bar/index.html
+++ b/Search_bar/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
+    <script async src="https://cse.google.com/cse.js?cx=31510c9d3a62f4cb4">
+    </script>
   </body>
 </html>
